--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrap{
+width: 100%;
+height: 84vh;
+background-color: rgb(0, 0, 0);
+display: flex;
+align-items: center;
+justify-content: center;
+      
+}
+
+.wrap_{
+      border: 2px solid rgb(83, 83, 164);
+      /* border-radius: 2rem; */
+      width: 70rem;
+      height: 30rem;
+      display: flex;
+      justify-content: space-between;
+      border-radius: 2rem 0 2rem 0;
+      box-shadow: 0 10px 5rem rgb(28, 28, 28);
+}
+
+.warp_c1{
+      /* display: flex; */
+      text-align: center;
+      justify-content: center;
+      
+      border-radius: 2rem 0 0 0;
+      /* border:2px solid red; */
+      width: 25rem;
+      background-color: blue;
+}
+
+.warp_c1 h1{
+      color: white;
+      font-size: xx-large;
+      font-weight: 900;
+      /* background-color: aqua; */
+      position: relative;
+      top: 13rem;
+      
+}
+.warp_c2{
+      /* border: 2px solid red; */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+}
+
+.form_{
+      /* border: 2px solid red; */
+      display: flex;
+      flex-direction: column;
+      /* padding: 2rem; */
+      
+}
+
+.form_box_in{
+      padding: 10px;
+      width: 40rem;
+      margin: 20px;
+      border: none;
+      border: 3px solid blue;
+      /* box-shadow: 0 10px 2rem rgb(230, 224, 224); */
+      background-color: rgb(0, 0, 0);
+}
+
+.form_btn{
+      background-color: transparent;
+      color: white;
+      border: 2px solid blue;
+      width: 40rem;
+      padding: 10px;
+      position: relative;
+      left: 20px;
+      font-size: larger;
+      font-weight: 500;
+      
+      
+}
+
+.form_btn:hover{
+      background-color: blue;
+      color: aliceblue;
+
+
+     
+}
+
+.error{
+      color: red;
+      
+      background-color: black;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 200rem;
+
+}
+
+.error h1{
+      opacity: 0.6;
+      font-size: 6rem;
 }
